--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "gamemania-my-portal",
+    "name": "origintypes",
     "version": "1.0.0",
     "description": "",
     "main": "gulpfile.js",
