--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "origintypes",
+    "name": "devPlugins",
     "version": "1.0.0",
-    "description": "",
+    "description": "All plugins on Dev",
     "main": "gulpfile.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,8 +9,26 @@
     "author": "Dwi Priyatmoko",
     "license": "ISC",
     "devDependencies": {
-        "bootstrap": "^4.3.1",
-        "jquery": "^3.4.1"
+        "autoprefixer": "^9.8.6",
+        "browser-sync": "^2.26.14",
+        "critical": "^3.0.0",
+        "eslint": "^7.9.0",
+        "gulp": "^4.0.2",
+        "gulp-autoprefixer": "^7.0.1",
+        "gulp-clean": "^0.4.0",
+        "gulp-clean-css": "^4.3.0",
+        "gulp-concat": "^2.6.1",
+        "gulp-copy": "^4.0.1",
+        "gulp-html-replace": "^1.6.2",
+        "gulp-notify": "^3.2.0",
+        "gulp-plumber": "^1.2.1",
+        "gulp-postcss": "^8.0.0",
+        "gulp-purgecss": "^3.0.0",
+        "gulp-rename": "^2.0.0",
+        "gulp-sourcemaps": "^2.6.5",
+        "gulp-tinypng-free": "^1.0.13",
+        "gulp-uglify": "^3.0.2",
+        "postcss": "^8.0.7"
     },
     "dependencies": {}
 }
